Bug 171971 - segfault when changing a new partition's file system
Summary: segfault when changing a new partition's file system
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0.0-ALPHA2
Platform: Ubuntu Unspecified
: NOR crash
Target Milestone: ---
Assignee: Volker Lanz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-01 18:12 UTC by Volker Lanz
Modified: 2008-10-01 18:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lanz 2008-10-01 18:12:35 UTC
Version:           1.0.0-ALPHA2 (using KDE 4.1.1)
Installed from:    Ubuntu Packages

When creating a new partition and later on changing the file system in the partition's properties, the application segfaults:

#5  FileSystemFactory::cloneWithNewType (newType=FileSystem::Ntfs, other=@0x0)
    at /home/vl/dev/partitionmanager/trunk/src/fs/filesystemfactory.cpp:142
#6  0x000000000041aad8 in OperationStack::mergeNewOperation (this=0xa83af8, 
    currentOp=<value optimized out>, pushedOp=@0x7fff1c2115b8)
    at /home/vl/dev/partitionmanager/trunk/src/core/operationstack.cpp:171
#7  0x000000000041b256 in OperationStack::push (this=0xa83af8, o=0xc63530)
    at /home/vl/dev/partitionmanager/trunk/src/core/operationstack.cpp:372
#8  0x0000000000428a49 in MainWindow::onPropertiesPartition (this=0xa83a10)
    at /home/vl/dev/partitionmanager/trunk/src/gui/mainwindow.cpp:657