When merging NewOperation and CreateFileSystemOperation, don't delete the old FS before trying to clone it.

BUG: 171971

svn path=/trunk/playground/sysadmin/partitionmanager/; revision=866672